--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,59 @@
 /*
 font-family: 'Montserrat', sans-serif;
 */
+
 html,
 body {
 	font-family: 'Montserrat', sans-serif;
+}
+.container {
+	margin: 0 auto;
+	padding: 0 15px;
+	max-width: 1200px;
+}
+/* Nav */
+.nav {
+	border-bottom: 1px solid #26292d;
+	padding: 20px 0;
+	background-color: #171718;
+	color: #f0e7e7;
+}
+
+.nav-row {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	column-gap: 30px;
+	row-gap: 20px;
+	flex-wrap: wrap;
+}
+.logo {
+	color: #f0e7e7;
+	font-size: 24px;
+}
+.logo strong {
+	font-weight: 700;
+}
+.nav-list {
+	display: flex;
+	align-items: center;
+	column-gap: 40px;
+	font-size: 16px;
+	font-weight: 500;
+}
+.nav-list__link {
+	color: #f0e7e7;
+}
+.nav-list__link--active {
+	position: relative;
+}
+.nav-list__link--active::before {
+	content: '';
+	position: absolute;
+	left: 0;
+	top: 100%;
+	display: block;
+	height: 2px;
+	width: 100%;
+	background-color: #5c62ec;
 }
