--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,23 @@
 /*
 font-family: 'Montserrat', sans-serif;
 */
+:root {
+	/*Colors */
+	--black: #171718;
+	--white: #f0e7e7;
+	--purple: #5c62ec;
+
+	--dark-bg: var(--black);
+	--header-text: var(--white);
+	--accent: var(--purple);
+	--text-color: var(--black);
+}
 
 html,
 body {
 	font-family: 'Montserrat', sans-serif;
+	letter-spacing: -0.5px;
+	color: var(--text-color);
 }
 .container {
 	margin: 0 auto;
@@ -15,10 +28,11 @@ body {
 }
 /* Nav */
 .nav {
+	letter-spacing: normal;
 	border-bottom: 1px solid #26292d;
 	padding: 20px 0;
-	background-color: #171718;
-	color: #f0e7e7;
+	background-color: var(--black);
+	color: var(--white);
 }
 
 .nav-row {
@@ -30,7 +44,7 @@ body {
 	flex-wrap: wrap;
 }
 .logo {
-	color: #f0e7e7;
+	color: var(--white);
 	font-size: 24px;
 }
 .logo strong {
@@ -44,7 +58,11 @@ body {
 	font-weight: 500;
 }
 .nav-list__link {
-	color: #f0e7e7;
+	color: var(--header-text);
+	transition: opacity 0.8s ease-in;
+}
+.nav-list__link:hover {
+	opacity: 0.8;
 }
 .nav-list__link--active {
 	position: relative;
@@ -57,5 +75,108 @@ body {
 	display: block;
 	height: 2px;
 	width: 100%;
-	background-color: #5c62ec;
+	background-color: var(--accent);
+}
+/* Header */
+.header {
+	padding: 40px 0;
+	min-height: 695px;
+
+	background-color: var(--black);
+	background-image: url('./../img/bg.png');
+	background-repeat: no-repeat;
+	background-size: auto;
+	background-position: center center;
+	color: var(--header-text);
+	text-align: center;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.header__wrapper {
+	padding: 0 15px;
+	max-width: 660px;
+}
+.header__title {
+	margin-bottom: 20px;
+	font-size: 40px;
+	font-weight: 700px;
+	line-height: 1.4;
+}
+.header__title strong {
+	font-size: 60px;
+	font-weight: 700;
+}
+.header__title em {
+	font-style: normal;
+	color: var(--accent);
+}
+.header__text {
+	margin-bottom: 40px;
+	font-size: 18px;
+	line-height: 1, 333;
+}
+.header__text p + p {
+	margin-top: 0.5em;
+}
+/* BTN */
+
+.btn {
+	display: inline-block;
+	height: 48px;
+	padding: 12px 28px;
+
+	border-radius: 5px;
+	background-color: var(--accent);
+	color: var(--white);
+	letter-spacing: 0.15px;
+	font-size: 16px;
+	font-weight: 500;
+	transition: opacity 0.2s ease-in;
+}
+.btn:hover {
+	opacity: 0.8;
+}
+.btn:active {
+	position: relative;
+	top: 1px;
+}
+
+/* General */
+.section {
+	padding: 70px 0;
+}
+.title-1 {
+	margin-bottom: 60px;
+	font-size: 60px;
+	font-weight: 700;
+	line-height: 1.3;
+	color: var(--accent);
+	text-align: center;
+}
+
+/* Project side*/
+
+.projects {
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 30px;
+	row-gap: 30px;
+}
+.project {
+	max-width: 370px;
+	background-color: var(--white);
+	box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+}
+.project__img {
+	border-radius: 10px;
+}
+.project__title {
+	padding: 15px 20px 25px;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 1.3;
+	color: var(--text-color);
 }
