--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ font-family: 'Montserrat', sans-serif;
 */
 :root {
 	/*Colors */
+	--blackpure: #000;
 	--black: #171718;
 	--white: #f0e7e7;
 	--purple: #5c62ec;
@@ -20,12 +21,35 @@ body {
 	font-family: 'Montserrat', sans-serif;
 	letter-spacing: -0.5px;
 	color: var(--text-color);
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+/* General */
+.section {
+	padding: 70px 0;
 }
 .container {
 	margin: 0 auto;
 	padding: 0 15px;
 	max-width: 1200px;
 }
+.title-1 {
+	margin-bottom: 60px;
+	font-size: 60px;
+	font-weight: 700;
+	line-height: 1.3;
+	color: var(--accent);
+	text-align: center;
+}
+.title-2 {
+	margin-bottom: 20px;
+
+	font-size: 40px;
+	line-height: 1.3;
+	font-weight: 700;
+}
+
 /* Nav */
 .nav {
 	letter-spacing: normal;
@@ -56,6 +80,7 @@ body {
 	column-gap: 40px;
 	font-size: 16px;
 	font-weight: 500;
+	row-gap: 10px;
 }
 .nav-list__link {
 	color: var(--header-text);
@@ -143,17 +168,27 @@ body {
 	top: 1px;
 }
 
-/* General */
-.section {
-	padding: 70px 0;
+/* Btn outline */
+.btn-outline {
+	display: flex;
+	column-gap: 10px;
+	align-items: center;
+
+	height: 48px;
+	padding: 12px 20px;
+
+	border-radius: 5px;
+	border: 1px solid var(--blackpure);
+	color: var(--blackpure);
+	transition: opacity 0.2 ease-in;
 }
-.title-1 {
-	margin-bottom: 60px;
-	font-size: 60px;
-	font-weight: 700;
-	line-height: 1.3;
-	color: var(--accent);
-	text-align: center;
+
+.btn-outline:hover {
+	opacity: 0.8;
+}
+.btn-outline:active {
+	position: relative;
+	top: 1px;
 }
 
 /* Project side*/
@@ -163,6 +198,7 @@ body {
 	flex-wrap: wrap;
 	column-gap: 30px;
 	row-gap: 30px;
+	justify-content: center;
 }
 .project {
 	max-width: 370px;
@@ -179,4 +215,124 @@ body {
 	font-size: 24px;
 	line-height: 1.3;
 	color: var(--text-color);
+}
+
+/* Project details */
+.project-details {
+	margin: 0 auto;
+	max-width: 865px;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+}
+.project-details__cover {
+	max-width: 100%;
+	margin-bottom: 40px;
+	box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+}
+.project-details__desc {
+	margin-bottom: 30px;
+	font-weight: 700;
+	font-size: 24px;
+	line-height: 1.3;
+}
+
+/* Content list */
+
+.content-list {
+	margin: 0 auto;
+	max-width: 570px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	row-gap: 40px;
+}
+.content-list a {
+	color: var(--accent);
+}
+.content-list__item {
+	font-size: 18px;
+	line-height: 1.5;
+}
+.content-list__item p + p {
+	margin-top: 0.5em;
+}
+
+/* footer */
+.footer {
+	margin-top: auto;
+	background-color: var(--dark-bg);
+	padding: 60px 0 50px;
+	color: var(--header-text);
+}
+.footer__wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 27px;
+}
+.social {
+	display: flex;
+	align-items: center;
+	column-gap: 30px;
+}
+.copyright {
+	font-size: 16px;
+}
+.copyright p + p {
+	margin-top: 0.5em;
+}
+@media (max-width: 620px) {
+	.header {
+		min-height: unset;
+	}
+	.header__title {
+		font-size: 30px;
+	}
+	.header__title strong {
+		font-size: 40px;
+	}
+	.section {
+		padding: 40px 0;
+	}
+	.title-1 {
+		margin-bottom: 30px;
+		font-size: 40px;
+	}
+	.project__title {
+		font-size: 22px;
+	}
+	.footer {
+		padding: 40px 0 30px;
+	}
+	.footer__wrapper {
+		row-gap: 20px;
+	}
+	.social {
+		column-gap: 20px;
+	}
+	.social__item {
+		width: 28px;
+	}
+	.copyright p {
+		font-size: 14px;
+	}
+	.title-2 {
+		margin-bottom: 10px;
+		font-size: 30px;
+	}
+	.content-list {
+		row-gap: 20px;
+	}
+	.content-list__item {
+		font-size: 16px;
+	}
+	.project-details__desc {
+		margin-bottom: 20px;
+		font-size: 22px;
+	}
 }
