--- a/css/main.css
+++ b/css/main.css
@@ -14,16 +14,39 @@ font-family: 'Montserrat', sans-serif;
 	--header-text: var(--white);
 	--accent: var(--purple);
 	--text-color: var(--black);
+
+	/* Light mode */
+	--page-bg: var(--white);
+	--text-color: var(--black);
+
+	--title-1: var(--accent);
+
+	--project-card-bg: var(--white);
+	--project-card-text: var(--black);
+	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+}
+.dark {
+	/* Dark mode */
+	--page-bg: #252526;
+	--text-color: var(--white);
+	--title-1: var(--white);
+	--project-card-bg: var(--black);
+	--project-card-text: var(--white);
+	--box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.8);
 }
 
 html,
 body {
-	font-family: 'Montserrat', sans-serif;
-	letter-spacing: -0.5px;
-	color: var(--text-color);
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	min-height: 100vh;
+
+	font-family: 'Montserrat', sans-serif;
+	letter-spacing: -0.5px;
+
+	/* color(light mode default) mode */
+	background-color: var(--page-bg);
+	color: var(--text-color);
 }
 /* General */
 .section {
@@ -39,7 +62,7 @@ body {
 	font-size: 60px;
 	font-weight: 700;
 	line-height: 1.3;
-	color: var(--accent);
+	color: var(--title-1);
 	text-align: center;
 }
 .title-2 {
@@ -61,13 +84,14 @@ body {
 
 .nav-row {
 	display: flex;
-	justify-content: space-between;
+	justify-content: flex-end;
 	align-items: center;
 	column-gap: 30px;
 	row-gap: 20px;
 	flex-wrap: wrap;
 }
 .logo {
+	margin-right: auto;
 	color: var(--white);
 	font-size: 24px;
 }
@@ -82,6 +106,40 @@ body {
 	font-weight: 500;
 	row-gap: 10px;
 }
+/* Dark Mode btn */
+.dark-mode-btn {
+	order: 1;
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	width: 51px;
+	height: 26px;
+	padding: 5px;
+	background-color: #272727;
+	border-radius: 50px;
+}
+.dark-mode-btn::before {
+	content: '';
+	position: absolute;
+	top: 1px;
+	left: 1px;
+
+	display: block;
+	width: 24px;
+	height: 24px;
+
+	border-radius: 50%;
+	background-color: var(--white);
+	transition: left 0.2s ease-in;
+}
+.dark-mode-btn--active::before {
+	left: 26px;
+}
+.dark-mode-btn__icon {
+	position: relative;
+	z-index: 9;
+}
+
 .nav-list__link {
 	color: var(--header-text);
 	transition: opacity 0.8s ease-in;
@@ -174,6 +232,7 @@ body {
 	column-gap: 10px;
 	align-items: center;
 
+	background-color: var(--white);
 	height: 48px;
 	padding: 12px 20px;
 
@@ -202,8 +261,8 @@ body {
 }
 .project {
 	max-width: 370px;
-	background-color: var(--white);
-	box-shadow: 0px 5px 35px rgba(0, 0, 0, 0.25);
+	background-color: var(--project-card-bg);
+	box-shadow: var(--box-shadow);
 	border-radius: 10px;
 }
 .project__img {
@@ -214,7 +273,7 @@ body {
 	font-weight: 700;
 	font-size: 24px;
 	line-height: 1.3;
-	color: var(--text-color);
+	color: var(--project-card-text);
 }
 
 /* Project details */
@@ -287,6 +346,15 @@ body {
 	margin-top: 0.5em;
 }
 @media (max-width: 620px) {
+	/* general */
+	.section {
+		padding: 40px 0;
+	}
+	.title-1 {
+		margin-bottom: 30px;
+		font-size: 40px;
+	}
+	/* header */
 	.header {
 		min-height: unset;
 	}
@@ -296,16 +364,32 @@ body {
 	.header__title strong {
 		font-size: 40px;
 	}
-	.section {
-		padding: 40px 0;
+	/* nav  */
+	.nav-row {
+		justify-content: space-between;
 	}
-	.title-1 {
-		margin-bottom: 30px;
-		font-size: 40px;
+	.dark-mode-btn {
+		order: 0;
 	}
+	/* projects */
 	.project__title {
 		font-size: 22px;
 	}
+	/* project-page */
+	.project-details__desc {
+		margin-bottom: 20px;
+		font-size: 22px;
+	}
+	/* content List */
+
+	.content-list {
+		row-gap: 20px;
+	}
+	.content-list__item {
+		font-size: 16px;
+	}
+
+	/* footer */
 	.footer {
 		padding: 40px 0 30px;
 	}
@@ -324,15 +408,5 @@ body {
 	.title-2 {
 		margin-bottom: 10px;
 		font-size: 30px;
-	}
-	.content-list {
-		row-gap: 20px;
-	}
-	.content-list__item {
-		font-size: 16px;
-	}
-	.project-details__desc {
-		margin-bottom: 20px;
-		font-size: 22px;
 	}
 }
