--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,11 @@ body {
 	line-height: 1.3;
 	font-weight: 700;
 }
-
+.sticky {
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
 /* Nav */
 .nav {
 	letter-spacing: normal;
@@ -165,6 +169,7 @@ body {
 }
 /* Header */
 .header {
+	margin-top: 40px;
 	padding: 40px 0;
 	min-height: 695px;
 
