--- a/css/main.css
+++ b/css/main.css
@@ -361,8 +361,13 @@ body {
 		padding: 40px 0;
 	}
 	.title-1 {
-		margin-bottom: 30px;
+		margin-top: 60px;
+		margin-bottom: 40px;
 		font-size: 40px;
+	}
+	.title-2 {
+		margin-bottom: 20px;
+		font-size: 30px;
 	}
 	/* header */
 	.header {
@@ -424,9 +429,5 @@ body {
 	}
 	.copyright p {
 		font-size: 14px;
-	}
-	.title-2 {
-		margin-bottom: 10px;
-		font-size: 30px;
 	}
 }
